=================
Changes for Crate
=================

Unreleased
==========

- Updated crate-admin to ``1.0.4`` which includes the following change:
     - Fixed getting started display issue on very wide screens.

 - Fixed an issue that caused ``ORDER BY`` clause to be ignored if used
   in combination with ``GROUP BY`` in subselects.
   e.g.: `SELECT x from (SELECT * from t1) as tt
          GROUP BY x ORDER BY x`

 - Allow semi-colon (;) in the end of simple SQL statements.

 - Enhanced performance optimisation of full joins by rewriting them to left,
   right or inner joins when conditions in ``WHERE`` exclude null values.

 - Serve admin ui from `/admin/` instead of `/_plugins/crate-admin/`

 - Added support for filtering and ordering on ``ignored`` object columns.

 - Added support for the double colon (::) cast operator.

 - Upgraded the parser from ANTLR3 to ANTLR4.

2017/01/09 1.0.2
================

 - Updated crate-admin to ``1.0.3`` which includes the following change:

    - Added compatibility with future crate versions which will serve
      the admin-ui from `/admin/` instead of `/_plugins/crate-admin/`.

 - Fixed a NPE when using a ``percentile`` aggregation in a multi-node
   environment.

 - Fixed ``INDEX`` constraint validation. Defining it on complex data
   types like e.g. ``object`` was silently ignored instead of throwing
   an error.

 - Fixed an issue that causes `UnsupportedFeatureException` for operations
   on a table where array access is used inside generated columns.
   e.g.: `CREATE TABLE t1 (cola string, gencola AS (a[1]))`
   error thrown when: `SELECT * from t1`, `DROP TABLE t1`, etc.

 - Fixed an issue that causes hanging queries if a data node disconnects from
   the cluster.

 - Fix: throw correct error if one tries to create a table starting with ``_``

 - Fixed an issue that causes UnhandledServerException on joins
   when ``WHERE`` clause contains conditions on columns of array type