@@ -41,6 +41,8 @@ public class CrateRestFilter extends RestFilter {
 
     public static final String ES_API_ENABLED_SETTING = "es.api.enabled";
     public static final Set<String> SUPPORTED_ENDPOINTS = ImmutableSet.of(
+        "/index.html",
+        "/static",
         "/admin",
         "/_sql",
         "/_plugin",
