@@ -5,7 +5,10 @@ Changes for Crate
 Unreleased
 ==========
 
-- Updated crate-admin to ``1.0.4`` which includes the following change:
+ - Serve admin ui from `/`
+
+ - Updated crate-admin to ``1.0.4`` which includes the following change:
+
      - Fixed getting started display issue on very wide screens.
 
  - Fixed an issue that caused ``ORDER BY`` clause to be ignored if used
